swagger docs and admin routes apdated
